-
Bug
-
Resolution: Fixed
-
Critical
-
None
-
None
-
3
-
9223372036854775807
The LU-17809 moved ptlrpc_invalidate_import() from pre-cleanup phase before obd_export_barrier() to final cleanup phase after the one. That causes ldlm_namespace_cleanup() to be skipped now in pre-cleanup and that leaves OSP locks issued to another MDTs alive pinning MDT original thread. As result obd_export_barrier() will stuck waiting until these lock either finished or cancelled. In our scenarios all MDTs are being umounted so locks remains not answered and unmount is stuck.
Proposed solution is to return at least ldlm_namespace_cancel() in pre-cleanup phase.
- is blocking
-
LU-17809 MDT umount exceeding 5 minute HA timeout
-
- Resolved
-